--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,5 @@ colored_json = "3.2.0"
 http = "0.2.9"
 reqwest = { version = "0.11"}
 tokio = { version = "1", features = ["full"] }
+yansi = "0.5.1"
 
